--- a/smartsystems.vcxproj.filters
+++ b/smartsystems.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClInclude Include="__vm\.smartsystems.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="__vm\.Smart Systems.vsarduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
