--- a/smartsystemscar.vcxproj.filters
+++ b/smartsystemscar.vcxproj.filters
@@ -15,13 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="smartsystems.ino" />
+    <None Include="smartsystemscar.ino" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="__vm\.smartsystems.vsarduino.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="__vm\.Smart Systems.vsarduino.h">
+    <ClInclude Include="__vm\.smartsystemscar.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
