--- a/smartsystems.vcxproj
+++ b/smartsystems.vcxproj
@@ -75,9 +75,9 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\hardware\sam\1.6.6\cores\arduino;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\hardware\sam\1.6.6\variants\arduino_due_x;D:\Users\joeyd\Dropbox\_school\2015-2016\Semester 2\Cloud api\smartsystems;C:\Program Files (x86)\Arduino\libraries;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\hardware\sam\1.6.6\libraries;C:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\Extensions\d1pcouoy.12k\Micro Platforms\default\debuggers;D:\Users\joeyd\Documents\Arduino\libraries;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\hardware\sam\1.6.6\system/libsam;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\hardware\sam\1.6.6\system/CMSIS/CMSIS/Include/;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\hardware\sam\1.6.6\system/CMSIS/Device/ATMEL/;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\tools\arm-none-eabi-gcc\4.8.3-2014q1/arm-none-eabi\include\c++\4.8.3;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\tools\arm-none-eabi-gcc\4.8.3-2014q1/arm-none-eabi/include/c++/4.8.3/arm-none-eabi/;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\tools\arm-none-eabi-gcc\4.8.3-2014q1/arm-none-eabi/include/;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\tools\arm-none-eabi-gcc\4.8.3-2014q1\lib\gcc\arm-none-eabi\4.8.3\include;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\hardware\sam\1.6.6\system\CMSIS\Device\ATMEL\;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\hardware\sam\1.6.6\system\libsam;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\hardware\sam\1.6.6\system\libsam\include;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\hardware\sam\1.6.6\system\CMSIS\CMSIS\Include\;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\hardware\sam\1.6.6\system\CMSIS\CMSIS\Include\;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\hardware\sam\1.6.6\system\CMSIS\Device\ATMEL\;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\hardware\sam\1.6.6\system\libsam;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\hardware\sam\1.6.6\system\libsam\include;C:\Program Files (x86)\Arduino/hardware/tools/g++_arm_none_eabi\arm-none-eabi\include;C:\Program Files (x86)\Arduino/hardware/tools/g++_arm_none_eabi\arm_none_eabi\include\;C:\Program Files (x86)\Arduino/hardware/tools/g++_arm_none_eabi\lib\gcc\arm-none-eabi\4.4.1\include;C:\Program Files (x86)\Arduino/hardware/tools/g++_arm_none_eabi\lib\gcc\arm-none-eabi\4.4.1\include\;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\hardware\sam\1.6.6/system/CMSIS/Device/ATMEL/sam3xa/include/pio;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\hardware\sam\1.6.6/system/libsam/include;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\hardware\sam\1.6.6/CMSIS/CMSIS/Include/;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\hardware\sam\1.6.6/system/CMSIS/Device/ATMEL/sam3xa/include;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\hardware\sam\1.6.6\system/libsam;D:\Users\joeyd\AppData\Roaming\arduino15\packages\arduino\hardware\sam\1.6.6\system/CMSIS/Device/ATMEL;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <ForcedIncludeFiles>D:\Users\joeyd\Dropbox\_school\2015-2016\Semester 2\Smart Systems\__vm\.Smart Systems.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
-      <PreprocessorDefinitions>printf=iprintf;F_CPU=84000000L;ARDUINO=167;ARDUINO_SAM_DUE;ARDUINO_ARCH_SAM;__SAM3X8E__;USB_VID=0x2341;USB_PID=0x003e;USBCON;__cplusplus;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <IgnoreStandardIncludePath>true</IgnoreStandardIncludePath>
+      <ForcedIncludeFiles>D:\Users\joeyd\Dropbox\_school\2015-2016\Semester 2\Cloud api\smartsystems\__vm\.smartsystems.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
+      <PreprocessorDefinitions>printf=iprintf;F_CPU=84000000L;ARDUINO=10605;ARDUINO_SAM_DUE;ARDUINO_ARCH_SAM;__SAM3X8E__;USB_VID=0x2341;USB_PID=0x003e;USBCON;__cplusplus;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <IgnoreStandardIncludePath>false</IgnoreStandardIncludePath>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -127,8 +127,12 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Bluetooth.h" />
     <ClInclude Include="__vm\.Smart Systems.vsarduino.h" />
     <ClInclude Include="__vm\.smartsystems.vsarduino.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Bluetooth.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
