--- a/smartsystems.vcxproj.filters
+++ b/smartsystems.vcxproj.filters
@@ -24,5 +24,13 @@
     <ClInclude Include="__vm\.Smart Systems.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Bluetooth.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Bluetooth.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
